--- a/server/views/case-summary-record-order.njk
+++ b/server/views/case-summary-record-order.njk
@@ -311,7 +311,7 @@
                     </div>
                 </div>
 
-                <dl class="govuk-grid-column-two-thirds">
+                <dl class="govuk-grid-column-two-thirds govuk-!-margin-top-0">
                     <div class="govuk-body govuk-!-margin-bottom-0 govuk-!-margin-top-1">
                         <dt>{{ moment(lastAttendance.attendanceDate, 'YYYY-MM-DD').format(displayDateFormat) }}
                             - {{ lastAttendance.contactType.description }}
@@ -331,7 +331,7 @@
                     </div>
                 </div>
 
-                <dl class="govuk-grid-column-two-thirds">
+                <dl class="govuk-grid-column-two-thirds govuk-!-margin-top-0">
                     <div class="govuk-heading-m govuk-!-margin-bottom-0">
                         <dt class="pac-dashboard-count">{{ attendances | length }}</dt>
                     </div>
@@ -349,7 +349,7 @@
                 </div>
             </div>
 
-            <dl class="govuk-grid-column-two-thirds">
+            <dl class="govuk-grid-column-two-thirds govuk-!-margin-top-0">
                 <div class="govuk-heading-m govuk-!-margin-bottom-1">
                     <dt class="pac-dashboard-count">{{ attendedAppointments.complied | length }}</dt>
                     <dd class="govuk-body govuk-!-font-weight-bold govuk-!-margin-left-0 govuk-!-margin-bottom-0 govuk-!-display-inline-block">
@@ -391,7 +391,7 @@
                 </div>
             </div>
 
-            <dl class="govuk-grid-column-two-thirds">
+            <dl class="govuk-grid-column-two-thirds govuk-!-margin-top-0">
                 <div class="govuk-heading-m govuk-!-margin-bottom-1">
                     <dt class="pac-dashboard-count">{{ attendedAppointments.failed | length }}</dt>
                     <dd class="govuk-body govuk-!-font-weight-bold govuk-!-margin-left-0 govuk govuk-!-margin-bottom-0 govuk-!-display-inline-block">
@@ -435,7 +435,7 @@
                         </div>
                     </div>
 
-                    <dl class="govuk-grid-column-two-thirds">
+                    <dl class="govuk-grid-column-two-thirds govuk-!-margin-top-0">
                         <dt/>
                         <dd class="govuk-heading-m govuk-!-margin-left-0 govuk-!-margin-bottom-1 pac-dashboard-count">{{ awaitingOutcome | length }}</dd>
                     </dl>
