--- a/server/views/accessibility-statement.njk
+++ b/server/views/accessibility-statement.njk
@@ -6,10 +6,10 @@
 {% block cookieBanner %}{% endblock %}
 {% block backlink %}
     {% from "govuk/components/back-link/macro.njk" import govukBackLink %}
-        {{ govukBackLink({
-            text: "Back",
-            href: params.backLink
-        }) }}
+    {{ govukBackLink({
+        text: "Back",
+        href: params.backLink
+    }) }}
 {% endblock %}
 
 {% block content %}
@@ -67,7 +67,7 @@
             <p class="govuk-body">We’re always looking to improve the accessibility of this service.</p>
             <p class="govuk-body">If you find any problems that are not listed on this page or think we’re not meeting
                 accessibility requirements, email: <a href="mailto:prepareacaseforsentence@digital.justice.gov.uk"
-                                                     class="govuk-link govuk-link--no-visited-state">prepareacaseforsentence@digital.justice.gov.uk</a>
+                                                      class="govuk-link govuk-link--no-visited-state">prepareacaseforsentence@digital.justice.gov.uk</a>
             </p>
 
 
@@ -110,6 +110,28 @@
                         2.4.2 A (Page Titled)</a>. These documents are automatically extracted from an external service
                     (NDelius). We are assessing how to fix this issue and when it may be fixed by.
                 </li>
+                <li>The headings in the risk register and the orders list are not presented in a logical order for
+                    screen readers, this fails
+                    <a href="https://www.w3.org/TR/WCAG21/#info-and-relationships">WCAG 1.3.1 Info and Relationships</a>.
+                    We are working on fixing this and it should be solved by August 2022.
+                </li>
+                <li>Some of the page titles in the service are not descriptive of the purpose of the page. They are also
+                    duplicated in some cases. This fails
+                    <a href="https://www.w3.org/TR/WCAG21/#page-titled">WCAG 2.4.2 Page Titled</a>. We are working on
+                    fixing
+                    this and it should be solved by August 2022.
+                </li>
+                <li>The visual date labels in the date picker do not match the accessible names. This fails <a
+                            href="https://www.w3.org/TR/WCAG21/#label-in-name">WCAG 2.5.3 Label in Name</a>.We are
+                    working on fixing this and it should be solved by August 2022.
+                </li>
+                <li>When the case list is filtered, the visual design shows an ‘x’ in the corner of each added filter
+                    that can be used to remove that filter. This isn’t reflected in the accessible label so there is no
+                    easy way to remove filters for screen reader users. This fails <a
+                            href="https://www.w3.org/TR/WCAG21/#info-and-relationships">WCAG 1.3.1 Info and
+                        Relationships</a> and <a href="https://www.w3.org/TR/WCAG21/#headings-and-labels">WCAG 2.4.6
+                        Headings and Labels</a>. We are working on fixing this and it should be solved by August 2022.
+                </li>
             </ol>
 
 
@@ -135,12 +157,10 @@
             <h2 class="govuk-heading-m">Preparation of this
                 accessibility statement</h2>
             <p class="govuk-body">This statement was prepared on Wednesday 31 March 2021. It was last reviewed on
-                Wednesday
-                31 March 2021.</p>
-            <p class="govuk-body">This service was last tested on Thursday 25 March 2021. The test was carried out by
-                the
-                Ministry of Justice Assistive Technology Support Team.</p>
-            <p class="govuk-body pac-secondary-text">Last updated: Wednesday 31 March 2021</p>
+                Thursday 14 July 2022.</p>
+            <p class="govuk-body">This service was last tested on Friday 29 April 2022. The test was carried out by
+                the Digital Accessibility Centre.</p>
+            <p class="govuk-body pac-secondary-text">Last updated: Wednesday 14 July 2022</p>
         </div>
     </div>
 {% endblock %}
