--- a/server/views/case-summary-risk.njk
+++ b/server/views/case-summary-risk.njk
@@ -56,7 +56,7 @@
                             {%- for risk in activeRisks %}
                                 <tbody class="govuk-table__body">
                                 <tr class="govuk-table__row">
-                                    <td class="govuk-table__cell govuk-!-font-weight-bold">{{ risk.type }}</td>
+                                    <th scope="row" class="govuk-table__cell govuk-!-font-weight-bold">{{ risk.type }}</th>
                                     <td class="govuk-table__cell">{{ moment(risk.startDate, 'YYYY-MM-DD').format(displayDateFormat) }}</td>
                                     <td class="govuk-table__cell">{{ moment(risk.nextReviewDate, 'YYYY-MM-DD').format(displayDateFormat) }}</td>
                                     <td class="govuk-table__cell">{{ (risk.notes if risk.notes | length) or '-' }}</td>
