--- a/server/views/case-summary-record-order.njk
+++ b/server/views/case-summary-record-order.njk
@@ -125,7 +125,7 @@
 
 {% block caseContent %}
 
-    <h1 class="govuk-heading-l govuk-!-margin-0">{{ communityData.sentence.description + (' (' + communityData.sentence.length + ' ' + communityData.sentence.lengthUnits + ')' if communityData.sentence.length)}}</h1>
+    <h1 class="govuk-heading-l govuk-!-margin-0">{{ title }}</h1>
 
     <div class="govuk-grid-row govuk-!-margin-top-6">
         <div class="govuk-grid-column-two-thirds">
