PIC-2148: Refactor title

--- a/server/views/case-summary-record-order.njk
+++ b/server/views/case-summary-record-order.njk
@@ -327,13 +327,12 @@
         <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible app-section-break--heavy govuk-!-width-two-thirds">
 
         <div class="govuk-grid-row">
-            <dl class="govuk-grid-column-one-third pac-!-grid-column-18 govuk-!-margin-top-0">
-                <dt class="govuk-heading-m govuk-!-margin-bottom-0">
+            <div class="govuk-grid-column-one-third pac-!-grid-column-18 govuk-!-margin-top-0">
+                <span class="govuk-heading-m govuk-!-margin-bottom-0">
                     <h3 class="govuk-body govuk-!-font-weight-bold govuk-!-margin-bottom-0 govuk-!-display-inline-block"
                         aria-hidden="true">Acceptable</h3>
-                </dt>
-                <dd hidden="true">Acceptable</dd>
-            </dl>
+                </span>
+            </div>
 
             <dl class="govuk-grid-column-two-thirds govuk-!-margin-top-0">
                 <dt hidden="true">Acceptable</dt>
@@ -369,16 +368,15 @@
 
 
         <div class="govuk-grid-row">
-            <dl class="govuk-grid-column-one-third pac-!-grid-column-18 govuk-!-margin-top-0">
-                <dt class="govuk-heading-m govuk-!-margin-bottom-0">
+            <div class="govuk-grid-column-one-third pac-!-grid-column-18 govuk-!-margin-top-0">
+                <span class="govuk-heading-m govuk-!-margin-bottom-0">
                     <h3 class="govuk-body govuk-!-font-weight-bold govuk-!-margin-bottom-0 govuk-!-display-inline-block"
                         aria-hidden="true">Unacceptable</h3>
-                </dt>
-                <dd hidden="true">Unacceptable</dd>
-            </dl>
+                </span>
+            </div>
 
             <dl class="govuk-grid-column-two-thirds govuk-!-margin-top-0 govuk-heading-m govuk-!-margin-bottom-1">
-                <dt hidden="true">Acceptable</dt>
+                <dt hidden="true">Unacceptable</dt>
                 <dd class="govuk-!-margin-left-0">
                     <span class="pac-dashboard-count">{{ attendedAppointments.failed | length }}</span>
                     <span class="govuk-body govuk-!-font-weight-bold govuk-!-margin-left-0 govuk-!-margin-bottom-0 govuk-!-display-inline-block">Attendances</span>
