--- a/server/views/case-summary-record-order.njk
+++ b/server/views/case-summary-record-order.njk
@@ -300,148 +300,124 @@
 
         <h2 class="govuk-heading-m govuk-!-margin-top-8">Attendance</h2>
 
-        <div class="govuk-grid-row">
+        <dl class="govuk-grid-row">
             {% if attendedAppointments.all | length %}
                 {% set lastAttendance = attendedAppointments.all | sort(true, false, 'attendanceDate') | first %}
 
-                <div class="govuk-grid-column-one-third pac-!-grid-column-18">
-                    <div class="govuk-heading-m govuk-!-margin-bottom-0">
-                        <h3 class="govuk-body govuk-!-font-weight-bold govuk-!-margin-bottom-0 govuk-!-display-inline-block">
-                            Last attended:</h3>
-                    </div>
-                </div>
+                <dt class="govuk-grid-column-one-third pac-!-grid-column-18 govuk-heading-m govuk-!-margin-bottom-0">
+                    <h3 class="govuk-body govuk-!-font-weight-bold govuk-!-margin-bottom-0 govuk-!-display-inline-block">
+                        Last attended:</h3>
+                </dt>
 
-                <dl class="govuk-grid-column-two-thirds govuk-!-margin-top-0">
-                    <div class="govuk-body govuk-!-margin-bottom-0 govuk-!-margin-top-1">
-                        <dt>{{ moment(lastAttendance.attendanceDate, 'YYYY-MM-DD').format(displayDateFormat) }}
-                            - {{ lastAttendance.contactType.description }}
-                            ({{ "Acceptable" if lastAttendance.complied else "Unacceptable" }})
-                        </dt>
-                    </div>
-                </dl>
+                <dd class="govuk-grid-column-two-thirds govuk-!-margin-left-0 govuk-body govuk-body govuk-!-margin-bottom-0 govuk-!-margin-top-1">
+                    {{ moment(lastAttendance.attendanceDate, 'YYYY-MM-DD').format(displayDateFormat) }}
+                    - {{ lastAttendance.contactType.description }}
+                    ({{ "Acceptable" if lastAttendance.complied else "Unacceptable" }})
+                </dd>
             {% endif %}
-        </div>
 
-        <div class="govuk-grid-row">
-            <div class="govuk-!-padding-top-2">
-                <div class="govuk-grid-column-one-third pac-!-grid-column-18">
-                    <div class="govuk-heading-m govuk-!-margin-bottom-0">
-                        <h3 class="govuk-body govuk-!-font-weight-bold govuk-!-margin-bottom-0 govuk-!-display-inline-block">
-                            Appointments to date</h3>
-                    </div>
-                </div>
+            <dt class="govuk-!-padding-top-2 govuk-grid-column-one-third pac-!-grid-column-18 govuk-heading-m govuk-!-margin-bottom-0">
+                <h3 class="govuk-body govuk-!-font-weight-bold govuk-!-margin-bottom-0 govuk-!-display-inline-block">
+                    Appointments to date</h3>
+            </dt>
 
-                <dl class="govuk-grid-column-two-thirds govuk-!-margin-top-0">
-                    <div class="govuk-heading-m govuk-!-margin-bottom-0">
-                        <dt class="pac-dashboard-count">{{ attendances | length }}</dt>
-                    </div>
-                </dl>
-            </div>
-        </div>
+            <dd class="govuk-grid-column-two-thirds govuk-!-margin-0 govuk-heading-m govuk-!-text-align-left govuk-!-padding-top-2 pac-dashboard-count">{{ attendances | length }}</dd>
+        </dl>
 
         <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible app-section-break--heavy govuk-!-width-two-thirds">
 
         <div class="govuk-grid-row">
-            <div class="govuk-grid-column-one-third pac-!-grid-column-18">
-                <div class="govuk-heading-m govuk-!-margin-bottom-0">
-                    <h3 class="govuk-body govuk-!-font-weight-bold govuk-!-margin-bottom-0 govuk-!-display-inline-block">
-                        Acceptable</h3>
-                </div>
+            <div class="govuk-grid-column-one-third pac-!-grid-column-18 govuk-!-margin-top-0">
+                <span class="govuk-heading-m govuk-!-margin-bottom-0">
+                    <h3 class="govuk-body govuk-!-font-weight-bold govuk-!-margin-bottom-0 govuk-!-display-inline-block"
+                        aria-hidden="true">Acceptable</h3>
+                </span>
             </div>
 
             <dl class="govuk-grid-column-two-thirds govuk-!-margin-top-0">
-                <div class="govuk-heading-m govuk-!-margin-bottom-1">
-                    <dt class="pac-dashboard-count">{{ attendedAppointments.complied | length }}</dt>
-                    <dd class="govuk-body govuk-!-font-weight-bold govuk-!-margin-left-0 govuk-!-margin-bottom-0 govuk-!-display-inline-block">
-                        Attendances
-                    </dd>
-                </div>
+                <dt hidden="true">Acceptable</dt>
+
+                <dd class="govuk-!-margin-left-0">
+                    <span class="govuk-heading-m govuk-!-margin-bottom-1 pac-dashboard-count">{{ attendedAppointments.complied | length }}</span>
+                    <span class="govuk-body govuk-!-font-weight-bold govuk-!-margin-left-0 govuk-!-margin-bottom-0 govuk-!-display-inline-block">Attendances</span>
+                </dd>
 
                 {% for complied in attendedComplied | sort(true, false, 'count') %}
-                    <div class="govuk-body govuk-!-margin-0">
-                        <dt class="govuk-body pac-dashboard-count">{{ complied.count }}</dt>
-                        <dd class="govuk-body govuk-!-margin-left-0 govuk-!-margin-bottom-0 govuk-!-display-inline-block">{{ complied.description }}</dd>
-                    </div>
+                    <dd class="govuk-body govuk-!-margin-0">
+                        <span class="govuk-body govuk-!-margin-0 pac-dashboard-count">{{ complied.count }}</span>
+                        <span class="govuk-body govuk-!-margin-left-0 govuk-!-margin-bottom-0 govuk-!-display-inline-block">{{ complied.description }}</span>
+                    </dd>
                 {% endfor %}
 
-                <div class="govuk-heading-m govuk-!-margin-bottom-1">
-                    <dt class="pac-dashboard-count">{{ absentAppointments.complied | length }}</dt>
-                    <dd class="govuk-body govuk-!-font-weight-bold govuk-!-margin-left-0 govuk-!-margin-bottom-0 govuk-!-display-inline-block">
-                        Absences
-                    </dd>
-                </div>
+                <dd class="govuk-!-margin-left-0 govuk-!-margin-top-1">
+                    <span class="govuk-heading-m govuk-!-margin-bottom-1 pac-dashboard-count">{{ absentAppointments.complied | length }}</span>
+                    <span class="govuk-body govuk-!-font-weight-bold govuk-!-margin-left-0 govuk-!-margin-bottom-0 govuk-!-display-inline-block">Absences</span>
+                </dd>
 
                 {% for complied in absentComplied | sort(true, false, 'count') %}
-                    <div class="govuk-body govuk-!-margin-0">
-                        <dt class="govuk-body pac-dashboard-count">{{ complied.count }}</dt>
-                        <dd class="govuk-body govuk-!-margin-left-0 govuk-!-margin-bottom-0 govuk-!-display-inline-block">{{ complied.description }}</dd>
-                    </div>
+                    <dd class="govuk-body govuk-!-margin-0">
+                        <span class="govuk-body pac-dashboard-count">{{ complied.count }}</span>
+                        <span class="govuk-body govuk-!-margin-left-0 govuk-!-margin-bottom-0 govuk-!-display-inline-block">{{ complied.description }}</span>
+                    </dd>
                 {% endfor %}
-
             </dl>
         </div>
+
 
         <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible govuk-!-width-two-thirds">
 
+
         <div class="govuk-grid-row">
-            <div class="govuk-grid-column-one-third pac-!-grid-column-18">
-                <div class="govuk-heading-m govuk-!-margin-bottom-2">
-                    <h3 class="govuk-body govuk-!-font-weight-bold govuk-!-margin-bottom-0 govuk-!-display-inline-block">
-                        Unacceptable</h3>
-                </div>
+            <div class="govuk-grid-column-one-third pac-!-grid-column-18 govuk-!-margin-top-0">
+                <span class="govuk-heading-m govuk-!-margin-bottom-0">
+                    <h3 class="govuk-body govuk-!-font-weight-bold govuk-!-margin-bottom-0 govuk-!-display-inline-block"
+                        aria-hidden="true">Unacceptable</h3>
+                </span>
             </div>
 
-            <dl class="govuk-grid-column-two-thirds govuk-!-margin-top-0">
-                <div class="govuk-heading-m govuk-!-margin-bottom-1">
-                    <dt class="pac-dashboard-count">{{ attendedAppointments.failed | length }}</dt>
-                    <dd class="govuk-body govuk-!-font-weight-bold govuk-!-margin-left-0 govuk govuk-!-margin-bottom-0 govuk-!-display-inline-block">
-                        Attendances
-                    </dd>
-                </div>
+            <dl class="govuk-grid-column-two-thirds govuk-!-margin-top-0 govuk-heading-m govuk-!-margin-bottom-1">
+                <dt hidden="true">Unacceptable</dt>
+                <dd class="govuk-!-margin-left-0">
+                    <span class="pac-dashboard-count">{{ attendedAppointments.failed | length }}</span>
+                    <span class="govuk-body govuk-!-font-weight-bold govuk-!-margin-left-0 govuk-!-margin-bottom-0 govuk-!-display-inline-block">Attendances</span>
+                </dd>
 
                 {% for failed in attendedFailed | sort(true, false, 'count') %}
-                    <div class="govuk-body govuk-!-margin-0">
-                        <dt class="govuk-body pac-dashboard-count">{{ failed.count }}</dt>
-                        <dd class="govuk-body govuk-!-margin-left-0 govuk govuk-!-margin-bottom-0 govuk-!-display-inline-block">{{ failed.description }}</dd>
-                    </div>
-                {% endfor %}
-
-                <div class="govuk-heading-m govuk-!-margin-bottom-1">
-                    <dt class="pac-dashboard-count">{{ absentAppointments.failed | length }}</dt>
-                    <dd class="govuk-body govuk-!-font-weight-bold govuk-!-margin-left-0 govuk-!-margin-bottom-0 govuk-!-display-inline-block">
-                        Absences
+                    <dd class="govuk-body govuk-!-margin-0">
+                        <span class="govuk-body pac-dashboard-count">{{ failed.count }}</span>
+                        <span class="govuk-body govuk-!-margin-left-0 govuk-!-margin-bottom-0 govuk-!-display-inline-block">{{ failed.description }}</span>
                     </dd>
-                </div>
+                {% endfor %}
+                <dd class="govuk-!-margin-left-0 govuk-!-margin-top-1">
+                    <span class="govuk-heading-m govuk-!-margin-bottom-1 pac-dashboard-count">{{ absentAppointments.failed | length }}</span>
+                    <span class="govuk-body govuk-!-font-weight-bold govuk-!-margin-left-0 govuk-!-margin-bottom-0 govuk-!-display-inline-block">Absences</span>
+                </dd>
 
                 {% for failed in absentFailed | sort(true, false, 'count') %}
-                    <div class="govuk-body govuk-!-margin-0">
-                        <dt class="govuk-body pac-dashboard-count">{{ failed.count }}</dt>
-                        <dd class="govuk-body govuk-!-margin-left-0 govuk govuk-!-margin-bottom-0 govuk-!-display-inline-block">{{ failed.description }}</dd>
-                    </div>
+                    <dd class="govuk-body govuk-!-margin-0">
+                        <span class="govuk-body pac-dashboard-count">{{ failed.count }}</span>
+                        <span class="govuk-body govuk-!-margin-left-0 govuk govuk-!-margin-bottom-0 govuk-!-display-inline-block">{{ failed.description }}</span>
+                    </dd>
                 {% endfor %}
             </dl>
         </div>
+
 
         {% if awaitingOutcome.length > 0 %}
             {% if awaitingOutcome.length | sort(false, false, 'IAPS deleted record') %}
 
                 <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible govuk-!-width-two-thirds">
 
-                <div class="govuk-grid-row">
-                    <div class="govuk-grid-column-one-third pac-!-grid-column-18">
-                        <div class="govuk-heading-m govuk-!-margin-bottom-2">
-                            <h3 class="govuk-body govuk-!-font-weight-bold govuk-!-margin-bottom-0 govuk-!-display-inline-block">
-                                Awaiting outcome</h3>
-                        </div>
-                    </div>
-
-                    <dl class="govuk-grid-column-two-thirds govuk-!-margin-top-0">
-                        <dt/>
-                        <dd class="govuk-heading-m govuk-!-margin-left-0 govuk-!-margin-bottom-1 pac-dashboard-count">{{ awaitingOutcome | length }}</dd>
-                    </dl>
-                </div>
+                <dl class="govuk-grid-row">
+                    <dt class="govuk-grid-column-one-third pac-!-grid-column-18 govuk-heading-m govuk-!-margin-bottom-2">
+                        <h3 class="govuk-body govuk-!-font-weight-bold govuk-!-margin-bottom-0 govuk-!-display-inline-block">
+                            Awaiting outcome</h3></dt>
+                    <dd class="govuk-grid-column-two-thirds govuk-!-margin-top-0 govuk-heading-m govuk-!-margin-left-0 govuk-!-margin-bottom-1 govuk-!-text-align-left pac-dashboard-count">{{ awaitingOutcome | length }}</dd>
+                </dl>
             {% endif %}
         {% endif %}
+
+
 
         {%- set unpaidWork = communityData.sentenceDetails.unpaidWork -%}
         {% if unpaidWork %}
